Сделана настройка для nginx. Заменен % на * в шаблоках поиска и удаления датчиков.

--- a/_Server/FanControl.conf
+++ b/_Server/FanControl.conf
@@ -1,10 +1,10 @@
 [program:FanControl]
-command=python3 ServerApp.py
+command=/home/ubuntu/.local/bin/gunicorn --bind 0.0.0.0:8080 ServerApp:flaskApplication
 directory=/home/ubuntu/ParameterServer/
 stdout_logfile=/home/ubuntu/ParameterServer/FanControl/Log/stdOut.log
 stderr_logfile=/home/ubuntu/ParameterServer/FanControl/Log/strErr.log 
-autostart=true
-autorestart=true
+autostart=false
+autorestart=false
 startretries=6
 user=ubuntu
 stopsignal=KILL
