--- a/_Controller/FanControl/FCConst.h.sample
+++ b/_Controller/FanControl/FCConst.h.sample
@@ -4,7 +4,8 @@
 #if !defined (_FC_Const_h_)
 #define _FC_Const_h_
 
-#include <Ethernet.h>
+#include <DHT.h> 
+#include <LOLIN_I2C_MOTOR.h>
 
 enum EFCErrors
 {
@@ -17,10 +18,29 @@ const char* const c_szSSID     = "";
 const char* const c_szPassword = "";
 
 // Сервер параметров
-const IPAddress c_ipHost(10,0,0,6);
+const char* const c_szHost = "http://10.0.0.6";
 const uint16_t c_nPort = 8080;
 
 const char* const c_szURLParamGet = "/FanControl/Parameters/Current/";
 const char* const c_szURLProbePost = "/FanControl/Probes/";
+
+// Датчик влажности
+const int c_nDHTType = DHT11;
+const int c_nDHTPin = D3;
+
+// Моторы
+const int c_nMotorFrequency = 1000;
+// Коды моторов
+enum EFCMotorCodes
+{
+    c_FCMCBathroom = MOTOR_CH_A,      // Ванная
+    c_FCMCRestroom = MOTOR_CH_B       // Туалет
+};
+// Коды режимов моторов, они же сдвиги в списке параметров
+enum EFCMotorLevels
+{
+    c_FCMLBaseLevel = 0,              // Постоянный режим
+    c_FCMLIntensiveLevel = 1          // Интенсивный режим
+};
 
 #endif // _FC_Const_h_
